--- a/package.json
+++ b/package.json
@@ -38,20 +38,20 @@
         "publish": "npm run build && electron-builder --win --publish always"
     },
     "devDependencies": {
-        "@babel/cli": "^7.8.3",
-        "@babel/core": "^7.8.3",
+        "@babel/cli": "^7.8.4",
+        "@babel/core": "^7.8.4",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
         "@babel/plugin-transform-runtime": "^7.8.3",
-        "@babel/preset-env": "^7.8.3",
+        "@babel/preset-env": "^7.8.4",
         "@babel/preset-react": "^7.8.3",
         "@babel/register": "^7.8.3",
-        "@babel/runtime": "^7.8.3",
+        "@babel/runtime": "^7.8.4",
         "babel-loader": "^8.0.6",
-        "cross-env": "^6.0.3",
+        "cross-env": "^7.0.0",
         "css-loader": "^3.4.2",
-        "electron": "^7.1.9",
-        "electron-builder": "^22.2.0",
+        "electron": "^8.0.0",
+        "electron-builder": "^22.3.2",
         "electron-devtools-installer": "^2.2.4",
         "electron-react-devtools": "^0.5.3",
         "electron-updater": "^4.2.0",
@@ -67,7 +67,7 @@
         "postcss-preset-env": "^6.7.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
-        "react-hot-loader": "^4.12.18",
+        "react-hot-loader": "^4.12.19",
         "react-markdown": "^4.3.1",
         "react-redux": "^7.1.3",
         "react-tabs": "^3.1.0",
@@ -76,12 +76,12 @@
         "request": "^2.88.0",
         "request-promise": "^4.2.5",
         "reselect": "^4.0.0",
-        "socks-proxy-agent": "^4.0.2",
-        "style-loader": "^1.1.2",
+        "socks-proxy-agent": "^5.0.0",
+        "style-loader": "^1.1.3",
         "url-loader": "^3.0.0",
         "webpack": "^4.41.5",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.1"
+        "webpack-dev-server": "^3.10.3"
     },
     "build": {
         "win": {
@@ -146,5 +146,8 @@
             "allowToChangeInstallationDirectory": true,
             "differentialPackage": true
         }
+    },
+    "dependencies": {
+        "@types/react": "^16.9.19"
     }
 }
