--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "unfx-proxy-checker",
-    "version": "1.6.4",
+    "version": "1.6.5",
     "main": "public/main.js",
     "license": "MIT",
     "author": {
@@ -17,14 +17,18 @@
         {
             "name": "Alexander",
             "url": "https://t.me/assnctr"
+        },
+        {
+            "name": "LaneSh4d0w",
+            "url": "https://github.com/LaneSh4d0w"
         }
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/shadixaced/unfx-proxy-checker"
+        "url": "https://github.com/lanesh4d0w/unfx-proxy-checker"
     },
     "bugs": {
-        "url": "https://github.com/shadixaced/unfx-proxy-checker/issues"
+        "url": "https://github.com/lanesh4d0w/unfx-proxy-checker/issues"
     },
     "homepage": "https://openproxy.space/software/proxy-checker",
     "scripts": {
@@ -38,50 +42,51 @@
         "publish": "npm run build && electron-builder --win --publish always"
     },
     "devDependencies": {
-        "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.8.7",
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-        "@babel/plugin-transform-runtime": "^7.8.3",
-        "@babel/preset-env": "^7.8.7",
-        "@babel/preset-react": "^7.8.3",
-        "@babel/register": "^7.8.6",
-        "@babel/runtime": "^7.8.7",
-        "babel-loader": "^8.0.6",
+        "@babel/cli": "^7.11.6",
+        "@babel/core": "^7.11.6",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+        "@babel/plugin-transform-runtime": "^7.11.5",
+        "@babel/preset-env": "^7.11.5",
+        "@babel/preset-react": "^7.10.4",
+        "@babel/register": "^7.11.5",
+        "@babel/runtime": "^7.11.2",
+        "babel-loader": "^8.1.0",
         "cross-env": "^7.0.2",
-        "css-loader": "^3.4.2",
-        "electron": "^8.1.0",
-        "electron-builder": "^22.4.0",
-        "electron-devtools-installer": "^2.2.4",
+        "css-loader": "^4.3.0",
+        "electron": "^10.1.3",
+        "electron-builder": "^22.8.1",
+        "electron-devtools-installer": "^3.1.1",
         "electron-react-devtools": "^0.5.3",
-        "electron-updater": "^4.2.2",
-        "file-loader": "^5.1.0",
+        "electron-updater": "^4.3.5",
+        "file-loader": "^6.1.1",
         "ip": "^1.1.5",
-        "js-flock": "^3.13.0",
-        "maxmind": "^4.1.0",
+        "js-flock": "^3.14.0",
+        "maxmind": "^4.3.0",
         "npm-run-all": "^4.1.5",
+        "postcss": "^8.1.1",
         "postcss-color-function": "^4.1.0",
-        "postcss-css-variables": "^0.14.0",
-        "postcss-easings": "^2.0.0",
-        "postcss-loader": "^3.0.0",
+        "postcss-css-variables": "^0.17.0",
+        "postcss-easings": "^3.0.1",
+        "postcss-loader": "^4.0.4",
         "postcss-preset-env": "^6.7.0",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0",
-        "react-hot-loader": "^4.12.19",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-hot-loader": "^4.13.0",
         "react-markdown": "^4.3.1",
-        "react-redux": "^7.2.0",
-        "react-tabs": "^3.1.0",
+        "react-redux": "^7.2.1",
+        "react-tabs": "^3.1.1",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "request": "^2.88.2",
-        "request-promise": "^4.2.5",
+        "request-promise": "^4.2.6",
         "reselect": "^4.0.0",
         "socks-proxy-agent": "^5.0.0",
-        "style-loader": "^1.1.3",
-        "url-loader": "^3.0.0",
-        "webpack": "^4.42.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3"
+        "style-loader": "^2.0.0",
+        "url-loader": "^4.1.1",
+        "webpack": "^4.44.2",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
     },
     "build": {
         "win": {
@@ -127,13 +132,13 @@
         "publish": [
             {
                 "provider": "github",
-                "owner": "shadixaced",
+                "owner": "lanesh4d0w",
                 "repo": "unfx-proxy-checker",
                 "private": false
             }
         ],
         "productName": "UNFX Proxy Checker",
-        "copyright": "2020 assnctr (Open Proxy Space)",
+        "copyright": "2020 assnctr (Open Proxy Space) / LaneSh4d0w (Independant)",
         "extraResources": [
             "./files/**"
         ],
@@ -148,7 +153,8 @@
         }
     },
     "dependencies": {
-        "@types/react": "^16.9.23",
-        "fs-extra": "^8.1.0"
+        "@types/react": "^16.9.51",
+        "fast-sort": "^2.2.0",
+        "fs-extra": "^9.0.1"
     }
 }
